--- a/assets/css/forms.css
+++ b/assets/css/forms.css
@@ -44,12 +44,13 @@
 	aspect-ratio: 3/1;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 782px) {
 	#hcaptcha-options #hcaptcha-forms-wrap table tbody tr td {
 		padding-block-start: 3px;
 		padding-inline-end: 8px;
 		padding-block-end: 3px;
 		padding-inline-start: 35%;
+		min-height: 19.5px;
 	}
 
 	#hcaptcha-options #hcaptcha-forms-wrap table tbody tr td.column-primary {
